--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400"
       rel="stylesheet"
     />
